cmake_minimum_required(VERSION 3.20)

project("aoc2023")

add_executable(day1 1.cpp)
add_executable(day2 2.cpp)
add_executable(day3 3.cpp)
add_executable(day4 4.cpp)
add_executable(day5 5.cpp)
add_executable(day6 6.cpp)
add_executable(day7 7.cpp)
add_executable(day8 8.cpp)
add_executable(day9 9.cpp)
add_executable(day10 10.cpp)
add_executable(day11 11.cpp)
add_executable(day12 12.cpp)
add_executable(day13 13.cpp)
add_executable(day14 14.cpp)
add_executable(day15 15.cpp)
add_executable(day16 16.cpp)
add_executable(day17 17.cpp)